--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
       <meta charset="utf-8">
       <title>JSChess</title>
+      <link href="styles.css" rel="stylesheet" type="text/css">
       <script type="text/javascript"> if (!window.console) console = {log: function() {}}; </script>
   </head>
   <body>
@@ -18,6 +19,7 @@
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/defs.js"></script>
     <script src="js/board.js"></script>
+    <script src="js/gui.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
