--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/defs.js"></script>
+    <script src="js/io.js"></script>
     <script src="js/board.js"></script>
     <script src="js/gui.js"></script>
     <script src="js/main.js"></script>
